--- a/src/app/ehd-opz/ourcity/map-pipeline/map-pipeline.component.html
+++ b/src/app/ehd-opz/ourcity/map-pipeline/map-pipeline.component.html
@@ -1,3 +1,12 @@
-<p>
-map-pipeline works!
-</p>
+<main>
+    <app-carto-map [center]="[40.42, -3.7]" zoom="13" (onMapCreated)="onMapCreated($event)">
+        <app-basemap [map]="map" url="https://{s}.basemaps.cartocdn.com/rastertiles/voyager_nolabels/{z}/{x}/{y}.png">
+        </app-basemap>
+
+        <app-layer [map]="map" [client]="cartoClient" [layerSource]="layerSource" [layerStyle]="layerStyle">
+        </app-layer>
+    </app-carto-map>
+
+    <app-widget class="Histogram" [map]="map" [client]="cartoClient" [source]="layerSource" column="price" [bins]="7" (onDataChanged)="onWidgetDataChanged($event)">
+    </app-widget>
+</main>
