--- a/src/loading.scss
+++ b/src/loading.scss
@@ -2,7 +2,7 @@
     .logo {
         width: 64px;
         height: 64px;
-        background: url(assets/img/NwkLogo.png) center center no-repeat;
+        background: url('assets/img/NwkLogo.png') center center no-repeat;
         background-size: cover;
     }
 }
