--- a/src/app/shared/components/splash/splash.component.html
+++ b/src/app/shared/components/splash/splash.component.html
@@ -28,6 +28,7 @@
                     </form>
                 </div>
                 <ng-content select='[splash-buttons]'></ng-content>
+                <ng-content select='[splash-text]'></ng-content>
             </div>
         </div>
     </div>
