--- a/src/app/ehd-opz/about/about.component.html
+++ b/src/app/ehd-opz/about/about.component.html
@@ -17,15 +17,32 @@
     </div>
 </app-splash>
 <section class='secondary-content'>
-    <h2 [ngStyle]="{'color':'white' }" class='clr-justify-content-center'>Our Staff</h2>
-    <ul id="tab-content" class="nav" role="tablist">
-        <li *ngFor="let subComponent of subComponents" role="presentation" class="nav-item">
-            <button class="btn btn-link nav-link" [routerLink]="subComponent.path" routerLinkActive="active" [attr.aria-selected]="router.url.endsWith(subComponent.path)" type="button" aria-controls="tabs-content">
-                {{subComponent.label}}
-          </button>
-        </li>
-    </ul>
-    <div id="tabs-content">
-        <router-outlet></router-outlet>
+    <h2 [ngStyle]="{'color':'white' }" class='clr-justify-content-center'>Recent Work</h2>
+    <div class="clr-row clr-justify-content-center" *ngFor='let article of article$'>
+        <div class="clr-col-xl-8 clr-col-md-10 clr-col-12">
+            <div class="card ">
+                <div class="card-header">
+                    <h2>{{ article.fields['Name']}}</h2>
+                    <a *ngFor="let tag of article.fields['Tags'] " class="label label-purple clickable ">
+                      {{ tag }}
+                    </a>
+                </div>
+                <div class="card-block">
+                    <div class="clr-row clr-justify-content-center">
+                        <div class="card-text clr-col-7">
+                            <p class='p3'>{{ article.fields['BodyText'] }}</p>
+                        </div>
+                        <div class="card-img clr-col-4">
+                            <img src="{{ article.fields[ 'CoverPhoto'][0][ 'url'] }} " />
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-footer ">
+                    <button class="btn btn-sm btn-link ">Footer Action 1</button>
+                    <button class="btn btn-sm btn-link ">Footer Action 2</button>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
