--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import "./theme.scss";
 // Clarity Component SCSS
 @import "../node_modules/@clr/ui/src/utils/components.clarity";
+@import url("https://fonts.googleapis.com/css?family=Rubik&display=swap");
 // -------- Colors -----------
 $primary-color: #0d47a1;
 $info-color: lightblue;
@@ -26,14 +27,20 @@ Menlo,
 Courier,
 monospace;
 $text-color: $black;
-$text-color-secondary: opacify($black, .45);
+$text-color-secondary: opacify($black,
+.45);
 $text-color-inverse: $white;
 $icon-color: inherit;
-$icon-color-hover: opacify($black, .75);
-$heading-color: opacify(#000, .85);
-$heading-color-dark: opacify($white, 1);
-$text-color-dark: opacify($white, .85);
-$text-color-secondary-dark: opacify($white, .65);
+$icon-color-hover: opacify($black,
+.75);
+$heading-color: opacify(#000,
+.85);
+$heading-color-dark: opacify($white,
+1);
+$text-color-dark: opacify($white,
+.85);
+$text-color-secondary-dark: opacify($white,
+.65);
 $text-selection-bg: $highlight-color;
 $font-variant-base: tabular-nums;
 $font-feature-settings-base: 'tnum';
@@ -47,17 +54,59 @@ $line-height-base: 1.5;
 $border-radius-base: .5rem;
 $border-radius-sm: .25rem;
 // Animation
-$ease-base-out: cubic-bezier(0.7, 0.3, 0.1, 1);
-$ease-base-in: cubic-bezier(0.9, 0, 0.3, 0.7);
-$ease-out: cubic-bezier(0.215, 0.61, 0.355, 1);
-$ease-in: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-$ease-in-out: cubic-bezier(0.645, 0.045, 0.355, 1);
-$ease-out-back: cubic-bezier(0.12, 0.4, 0.29, 1.46);
-$ease-in-back: cubic-bezier(0.71, -0.46, 0.88, 0.6);
-$ease-in-out-back: cubic-bezier(0.71, -0.46, 0.29, 1.46);
-$ease-out-circ: cubic-bezier(0.08, 0.82, 0.17, 1);
-$ease-in-circ: cubic-bezier(0.6, 0.04, 0.98, 0.34);
-$ease-in-out-circ: cubic-bezier(0.78, 0.14, 0.15, 0.86);
-$ease-out-quint: cubic-bezier(0.23, 1, 0.32, 1);
-$ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-$ease-in-out-quint: cubic-bezier(0.86, 0, 0.07, 1);
+$ease-base-out: cubic-bezier(0.7,
+0.3,
+0.1,
+1);
+$ease-base-in: cubic-bezier(0.9,
+0,
+0.3,
+0.7);
+$ease-out: cubic-bezier(0.215,
+0.61,
+0.355,
+1);
+$ease-in: cubic-bezier(0.55,
+0.055,
+0.675,
+0.19);
+$ease-in-out: cubic-bezier(0.645,
+0.045,
+0.355,
+1);
+$ease-out-back: cubic-bezier(0.12,
+0.4,
+0.29,
+1.46);
+$ease-in-back: cubic-bezier(0.71,
+-0.46,
+0.88,
+0.6);
+$ease-in-out-back: cubic-bezier(0.71,
+-0.46,
+0.29,
+1.46);
+$ease-out-circ: cubic-bezier(0.08,
+0.82,
+0.17,
+1);
+$ease-in-circ: cubic-bezier(0.6,
+0.04,
+0.98,
+0.34);
+$ease-in-out-circ: cubic-bezier(0.78,
+0.14,
+0.15,
+0.86);
+$ease-out-quint: cubic-bezier(0.23,
+1,
+0.32,
+1);
+$ease-in-quint: cubic-bezier(0.755,
+0.05,
+0.855,
+0.06);
+$ease-in-out-quint: cubic-bezier(0.86,
+0,
+0.07,
+1);
