--- a/src/app/ehd-opz/ourcity/ourcity.component.html
+++ b/src/app/ehd-opz/ourcity/ourcity.component.html
@@ -26,8 +26,8 @@
         </li>
     </ul>
     <div id="tabs-content" class="clr-row clr-justify-content-center">
-        <div class="clr-col-lg-8 clr-col-md-10 clr-col-12">
-            <div class="card ">
+        <div class="clr-col-12">
+            <div class="card">
                 <div class="card-block">
                     <app-map class='clr-row flex-row'></app-map>
                 </div>
