--- a/src/app/ehd-opz/ourcity/ourcity.component.scss
+++ b/src/app/ehd-opz/ourcity/ourcity.component.scss
@@ -1,4 +1,3 @@
-@import '../../../../node_modules/mapbox-gl/src/css/mapbox-gl.css';
 @import '../../app.component.scss';
 .splash-buttons {
     flex-basis: content;
@@ -56,36 +55,15 @@
     margin-bottom: 2rem
 }
 
-.map-sidebar {
-    display: flex;
-    align-self: center;
-    flex-direction: column;
+.clr-vertical-nav .nav-link,
+clr-icon.nav-trigger-icon {
+    color: black !important;
+    $clr-use-custom-properties: true;
+    $clr-vertical-nav-icon-active-color: black !default;
+    $clr-vertical-nav-toggle-icon-color: black !default;
 }
 
-#map {
-    height: 80vh;
-    width: 100%;
-    z-index: 0;
-}
-
-.as-app,
-as-responsive-content,
-.as-main,
-.as-map-area {
-    height: 80vh;
-}
-
-.as-panel {
-    flex-direction: column;
-    padding: 16px;
-    background: white;
-}
-
-.as-btn {
-    margin-top: 16px;
-}
-
-as-legend {
-    --as-legend--padding: 0;
-    width: 100%;
+.mapboxgl-canvas-container {
+    height: 100vh;
+    color: white;
 }
