--- a/src/app/ehd-opz/zoning/zoning.component.scss
+++ b/src/app/ehd-opz/zoning/zoning.component.scss
@@ -3,3 +3,21 @@
     color: black;
     -webkit-text-fill-color: black;
 }
+
+.title-zone {
+    user-select: none;
+    font-size: 4rem;
+    font-family: 'Century Gothic';
+    font-weight: 700;
+}
+
+.title-bldg {
+    user-select: none;
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.list {
+    color: white;
+    -webkit-text-fill-color: white;
+}
