--- a/src/app/ehd-opz/zoning/zoning.component.html
+++ b/src/app/ehd-opz/zoning/zoning.component.html
@@ -41,7 +41,7 @@
                     </ul>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" (click)="copyReqs(zoneName,bldgType)">Add to Clipboard</button>
+                    <button type="button" class="btn btn-primary" (click)="copyReqs()">Add to Clipboard</button>
                     <button type="button" class="btn btn-primary" (click)="opened = false">
                         I'm the only way to close the modal!
                     </button>
