new zoning page

--- a/src/app/ehd-opz/zoning/zoning.component.scss
+++ b/src/app/ehd-opz/zoning/zoning.component.scss
@@ -9,6 +9,14 @@
     font-size: 4rem;
     font-family: 'Century Gothic';
     font-weight: 700;
+    height: 4.15rem;
+    padding: inherit;
+    margin: auto;
+    margin-left: 0;
+    width: max-content;
+    border-radius: .25rem;
+    color: black;
+    -webkit-text-fill-color: black;
 }
 
 .title-bldg {
