--- a/src/app/ehd-opz/zoning/zoning.component.html
+++ b/src/app/ehd-opz/zoning/zoning.component.html
@@ -1,9 +1,1 @@
-<div class="card">
-    <div class="card-header">
-      
-    </div>
-    <div class="card-block clr-row">
-    </div>
-     <div class="card-footer">
-    </div>
-</div>
+<router-outlet></router-outlet>
