--- a/src/app/ehd-opz/about/about.component.scss
+++ b/src/app/ehd-opz/about/about.component.scss
@@ -58,3 +58,11 @@
 #tabs-content {
     min-height: 50vh
 }
+
+.card-image {
+    max-width: 40%;
+    float: right;
+    border-radius: 0.25rem;
+    margin: 1rem;
+    max-height: 25vh;
+}
