--- a/src/app/ehd-opz/about/about.component.html
+++ b/src/app/ehd-opz/about/about.component.html
@@ -1,21 +1,3 @@
-<app-splash [backgroundSetting]='backgroundStyle' parentFragment='/opz'>
-    <div splash-page class='clr-col'>
-        <h3 class='dept clr-hidden-xs-down'>division of</h3>
-        <br>
-        <h2 class='dept-ehd clr-hidden-xs-down'>Planning & Zoning</h2>
-    </div>
-    <h2 splash-title class='splash-title' *ngFor='let splash of splashTitle$'>
-        <clr-icon shape='users' class='full-icon'></clr-icon>
-        {{ splash.fields['Content'] }}
-    </h2>
-    <div splash-buttons class="clr-col clr-col-xl-5 clr-col-lg-6 clr-col-md-8 clr-col-12 splash-buttons">
-        <button *ngFor="let button of button$" class="btn btn-primary btn-lg btn-block">
-          <clr-icon [attr.shape]='button.icon' size='24'></clr-icon>
-          <span class="clr-hidden-sm-down">{{ button.text }}</span>
-          <span class="clr-hidden-sm-up">{{ button.textSmall }}</span>
-        </button>
-    </div>
-</app-splash>
 <section class='secondary-content'>
     <h2 [ngStyle]="{'color':'white'}" class='clr-justify-content-center'>Recent Work</h2>
     <div class="clr-row clr-justify-content-center" *ngFor='let article of article$'>
@@ -28,12 +10,10 @@
                 </div>
                 <div class="card-block">
                     <div class="clr-row clr-justify-content-center">
-                        <div class="card-text clr-col-7">
-                            <p class='p3'>{{ article.fields['BodyText'] }}</p>
-                        </div>
-                        <div class="card-img clr-col-4">
-                            <img src="{{ article.fields[ 'CoverPhoto'][0][ 'url'] }} " />
-                        </div>
+                            <div class="card-text clr-col-11">
+                                <img src="{{ article.fields[ 'CoverPhoto'][0][ 'url'] }}" class='card-image'/>
+                                <h5 innerHtml="{{ article.fields['BodyText'] }}"></h5>
+                            </div>
                     </div>
                 </div>
 
