--- a/src/app/ehd-opz/resources/sub-pages/redev/redev.component.html
+++ b/src/app/ehd-opz/resources/sub-pages/redev/redev.component.html
@@ -1,42 +1,49 @@
-<clr-datagrid (clrDgRefresh)="refresh($event)" [clrDgLoading]="loading">
-    <clr-dg-column [clrDgField]="'document'">
-        Document
-    </clr-dg-column>
-    <clr-dg-column [clrDgField]="'pubDate'">
-        <ng-container>
-            Publication Date
-        </ng-container>
-    </clr-dg-column>
-    <clr-dg-column [clrDgField]="'filetype'" [style.width.px]="10">
-        <ng-container>
-            File Type
-        </ng-container>
-    </clr-dg-column>
-    <clr-dg-column></clr-dg-column>
-
-    <clr-dg-row *clrDgItems="let data of listOfData" [clrDgItem]='data'>
-        <clr-dg-cell>{{data.document}}</clr-dg-cell>
-        <clr-dg-cell>{{data.pubDate | date}}</clr-dg-cell>
-        <clr-dg-cell>{{data.filetype}}</clr-dg-cell>
-        <clr-dg-cell>
-            <a class="open-doc btn btn-primary btn-lg btn-block" href="{{ data.link }}">
+<p-dataView #dv [value]="listOfData" [paginator]="true" [rows]="5" filterBy="document"
+    [sortField]="sortField" [sortOrder]="sortOrder">
+    <p-header>
+        <div class="ui-helper-clearfix">
+            <div class="ui-g">
+                <div class="ui-g-12 ui-md-4">
+                    <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Sort By" (onChange)="onSortChange($event)" [style]="{'min-width':'140px'}"></p-dropdown>
+                </div>
+                <div class="ui-g-6 ui-md-4 filter-container">
+                    <div style="position:relative">
+                        <input type="search" ngDefaultControl pInputText placeholder="Search by Name" (input)="dv.filter($event.target.value)">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </p-header>
+    <ng-template let-data pTemplate="listItem">
+        <div>{{data.document}}</div>
+        <div>{{data.pubDate | date}}</div>
+        <div>{{data.filetype}}</div>
+        <div>
+             <a class="open-doc btn btn-primary btn-lg btn-block" (click)="openDoc($event, data)">
                 <clr-icon shape='pop-out' size='12'></clr-icon>
                 <span>Open Document</span>
             </a>
-        </clr-dg-cell>
-    </clr-dg-row>
-    <clr-dg-detail *clrIfDetail="let detail">
-        <clr-dg-detail-header>
-            {{detail.document}}
-        </clr-dg-detail-header>
-        <clr-dg-detail-body>
-            <iframe [src]="sanitizer.bypassSecurityTrustResourceUrl(detail.embedLink)" [ngStyle]="{'width': '100%', 'height': '70vh', 'border-radius': '10px'}">
+        </div>
+    </ng-template>
+    <ng-template pTemplate="paginatorleft" let-state>
+        {{state.first}}
+        <button type="button" pButton icon="fa-refresh"></button>
+    </ng-template>
+    <ng-template pTemplate="paginatorright">
+        <button type="button" pButton icon="fa-cloud-upload"></button>
+    </ng-template>
+</p-dataView>
+<clr-modal id='DocView' [clrModalSize]="'xl'" *ngIf="selectedDoc" [(clrModalOpen)]="displayDialog" [clrModalStaticBackdrop]="false">
+    <h3 class="modal-title">
+        {{ selectedDoc.document }}
+    </h3>
+    <div class="modal-body">
+             <iframe *ngIf="selectedDoc" [src]="sanitizer.bypassSecurityTrustResourceUrl(selectedDoc.embedLink)" [ngStyle]="{'width': '100%', 'height': '70vh', 'border-radius': '10px'}">
             </iframe>
-        </clr-dg-detail-body>
-    </clr-dg-detail>
-    <clr-dg-footer>
-        <clr-dg-pagination #pagination [clrDgPageSize]="15" [(clrDgPage)]="page">
-            {{pagination.firstItem + 1}} - {{pagination.lastItem + 1}} of {{pagination.totalItems}}
-        </clr-dg-pagination>
-    </clr-dg-footer>
-</clr-datagrid>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-primary" (click)="displayDialog = false">
+            I'm the only way to close the modal!
+        </button>
+    </div>
+</clr-modal>
