--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -64,7 +64,7 @@ html,
 body,
 :host {
     overflow-x: hidden;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Century Gothic', sans-serif;
 }
 
 .sub-nav,
