--- a/src/app/ehd-opz/zoning/diagrams/lot.component.scss
+++ b/src/app/ehd-opz/zoning/diagrams/lot.component.scss
@@ -81,3 +81,8 @@ svg {
     position: absolute;
     z-index: 99;
 }
+
+h1 {
+    color: white !important;
+    -webkit-text-fill-color: white !important;
+}
