--- a/src/app/ehd-opz/boards/boards.component.html
+++ b/src/app/ehd-opz/boards/boards.component.html
@@ -18,7 +18,7 @@
 </app-splash>
 <section class='secondary-content'>
     <h2 [ngStyle]="{'color':'white' }" class='clr-justify-content-center'>Board Members</h2>
-    <nav mat-tab-nav-bar>
+    <nav mat-tab-nav-bar [ngStyle]="{'margin':'.5rem' }">
         <a mat-tab-link *ngFor="let link of subComponents" [routerLink]="link.path" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive" (click)='getTab(link.path)'>
             {{link.label}}
         </a>
