--- a/src/app/ehd-opz/planning/planning.component.html
+++ b/src/app/ehd-opz/planning/planning.component.html
@@ -6,23 +6,23 @@
     </div>
     <h2 splash-title class='splash-title' *ngFor='let splash of splashTitle$'>{{ splash.fields['Content'] }}</h2>
     <div splash-buttons class="splash-buttons clr-row clr-justify-content-center">
-        <button class="btn btn-primary btn-lg btn-block">
+        <button class="btn btn-success btn-lg btn-block">
           <clr-icon shape='calendar' size='24'></clr-icon>
            What we do
         </button>
-        <button class="btn btn-primary btn-lg btn-block">
+        <button class="btn btn-success btn-lg btn-block">
           <clr-icon shape='file' size='24'></clr-icon>
           Urban Design
         </button>
-        <button class="btn btn-primary btn-lg btn-block">
+        <button class="btn btn-success btn-lg btn-block">
           <clr-icon shape='map' size='24'></clr-icon>
           Land Use
         </button>
-        <button class="btn btn-primary btn-lg btn-block">
+        <button class="btn btn-success btn-lg btn-block">
           <clr-icon shape='pop-out' size='24'></clr-icon>
           Transportation
         </button>
-        <button class="btn btn-primary btn-lg btn-block">
+        <button class="btn btn-success btn-lg btn-block">
           <clr-icon shape='pop-out' size='24'></clr-icon>
            Community + Economic Development
         </button>
