--- a/src/app/shared/components/splash/splash.component.html
+++ b/src/app/shared/components/splash/splash.component.html
@@ -13,7 +13,7 @@
                 <div [(style.display)]="searchDisplay" class='app-search clr-flex clr-col-12 clr-col-sm-12 clr-col-md-10 clr-col-lg-6 clr-col-xl-5'>
                     <form class="clr-form clr-col-12" [formGroup]="exampleForm">
                         <div class="clr-form-control clr-flex-row" [ngStyle]="{
-                            'background': 'rgba(200, 10, 200, .85)', 
+                            'background': '#f0c59f', 
                             'padding': 'inherit',
                             'border-radius': '.25rem'}">
                             <label for="example" class="clr-align-self-center clr-col-1">
