--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,4 @@
 @import '../styles.scss';
-
 header[_ngcontent-nwk-clr-c231] .settings[_ngcontent-nwk-clr-c231],
 header[_ngcontent-nwk-clr-c231] .header-nav[_ngcontent-nwk-clr-c231],
 header[_ngcontent-nwk-clr-c231] .header-actions[_ngcontent-nwk-clr-c231],
@@ -40,8 +39,7 @@ hr {
     font-weight: bold;
     color: white;
     -webkit-text-fill-color: white;
-
-    :nth-child(3) {
+     :nth-child(3) {
         font-weight: lighter !important;
     }
 }
@@ -62,9 +60,9 @@ span {
     display: inline-block;
 }
 
-html, body, :host {
-    font-size: unset;
-    font-size: calc(var(--vh) * 0.3 + 14) !important;
+html,
+body,
+ :host {
     overflow-x: hidden;
     font-family: 'Segoe UI', 'Open Sans', sans-serif;
 }
@@ -73,7 +71,6 @@ html, body, :host {
 .subnav {
     background-color: transparent;
     height: 1.5rem;
-
     h3 {
         margin-top: -.5rem !important;
         color: white;
@@ -113,7 +110,6 @@ footer {
     letter-spacing: calc(.025em + .1vw);
     font-family: "Rubik", sans-serif;
     text-align: center;
-
     i {
         transform: translateX(-.5rem);
         vertical-align: middle;
@@ -142,4 +138,10 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+p {
+    font-size: .88rem;
+    font-weight: normal;
+    line-height: normal;
 }
