--- a/src/app/ehd-opz/about/about.component.html
+++ b/src/app/ehd-opz/about/about.component.html
@@ -1,5 +1,5 @@
 <section class='secondary-content'>
-    <h2 [ngStyle]="{'color':'white'}" class='clr-justify-content-center'>Recent Work</h2>
+    <h2 class='clr-justify-content-center'>Recent Work</h2>
     <div class="clr-row clr-justify-content-center" *ngFor='let article of article$'>
         <div class="clr-col-xl-8 clr-col-md-10 clr-col-12">
             <div class="card ">
