--- a/src/app/ehd-opz/contact/contact.component.html
+++ b/src/app/ehd-opz/contact/contact.component.html
@@ -48,7 +48,7 @@
     </div>
 </app-splash>
 <section class='secondary-content'>
-    <h2 [ngStyle]="{'color':'white' }" class='clr-justify-content-center'>Contact Form</h2>
+    <h2 class='clr-justify-content-center'>Contact Form</h2>
     <div class="clr-row clr-justify-content-center">
         <div class="clr-col-xl-8 clr-col-md-10 clr-col-12">
             <div class="card">
