--- a/src/app/ehd-opz/home/home.component.html
+++ b/src/app/ehd-opz/home/home.component.html
@@ -9,7 +9,7 @@
         {{ splash.fields['Content'] }}
     </h2>
     <div splash-buttons class="clr-col clr-col-xl-5 clr-col-lg-6 clr-col-md-8 clr-col-12 splash-buttons">
-        <a *ngFor="let button of button$" class="btn btn-primary btn-lg btn-block" href="{{ button.link }}">
+        <a *ngFor="let button of button$" class="btn btn-lg btn-block" href="{{ button.link }}">
             <clr-icon [attr.shape]='button.icon' size='24'></clr-icon>
             <span class="clr-hidden-sm-down">{{ button.text }}</span>
             <span class="clr-hidden-sm-up">{{ button.textSmall }}</span>
