--- a/src/app/ehd-opz/resources/resources.component.scss
+++ b/src/app/ehd-opz/resources/resources.component.scss
@@ -1,8 +1,6 @@
 @import '../../app.component.scss';
-
 .splash-buttons {
     flex-basis: content;
-
     .btn {
         display: flex;
         box-shadow: .1rem .1rem .25rem black;
@@ -23,7 +21,6 @@
     font-size: calc(var(--vw) * 0.01 + 25px);
     border-radius: .5rem;
     margin: unset !important;
-
     h2 {
         margin: unset;
         text-align: center;
@@ -76,7 +73,6 @@
 
 .modal-body {
     min-height: 70vh;
-
     iframe {
         width: 100%;
         height: 69vh;
@@ -101,7 +97,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0rem;
-    border-bottom: 1px solid #d9dad9;
+    border-bottom: 1px solid $app-info-color;
 }
 
 .ui-panel-content {
