--- a/src/app/ehd-opz/staff/staff.component.html
+++ b/src/app/ehd-opz/staff/staff.component.html
@@ -22,7 +22,7 @@
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">{{ staff.fields['Name-First']}} {{ staff.fields['Name-Last'] }}</h2>
-                    <span class="label label-warning" [ngStyle]="{'font-size': '.75rem'}"
+                    <span class="label label-info" [ngStyle]="{'font-size': '.75rem'}"
                         innerHtml="{{ staff.fields['Position'] }}"></span>
                 </div>
                 <div class="card-block">
@@ -33,11 +33,10 @@
                         </div>
                     </div>
                 </div>
-    
                 <div class="card-footer">
-                    <button class="btn btn-lg btn-primary">City Hall | Room {{ staff.fields['Room'] }}</button>
-                    <a class="btn btn-lg btn-primary" href="tel:{{ staff.fields['Phone'] }}">Tel: {{ staff.fields['Phone'] }}</a>
-                    <a class="btn btn-lg btn-primary" href="mailto:{{ staff.fields['Email'] }}?Subject=Website%20Inquiry">Email: {{ staff.fields['Email'] }}</a>
+                    <button class="btn btn-lg clr-col-6">City Hall | Room {{ staff.fields['Room'] }}</button>
+                    <button class="btn btn-lg clr-col-5" href="tel:{{ staff.fields['Phone'] }}">Tel: {{ staff.fields['Phone'] }}</button>
+                    <button class="btn btn-lg clr-col-12" href="mailto:{{ staff.fields['Email'] }}?Subject=Website%20Inquiry">Email: {{ staff.fields['Email'] }}</button>
                 </div>
             </div>
         </div>
