--- a/src/app/ehd-opz/staff/staff.component.scss
+++ b/src/app/ehd-opz/staff/staff.component.scss
@@ -1,8 +1,6 @@
 @import '../../app.component.scss';
-
 .splash-buttons {
     flex-basis: content;
-
     .btn {
         display: flex;
         box-shadow: .1rem .1rem .25rem black;
@@ -23,7 +21,6 @@
     font-size: calc(var(--vw) * 0.01 + 25px);
     border-radius: .5rem;
     margin: unset !important;
-
     h2 {
         margin: unset;
         text-align: center;
@@ -80,7 +77,8 @@
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
     .btn {
-        margin: auto;
+        margin: .15rem;
     }
 }
