--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,13 @@
 // Your Application Theme File
 @import "./theme.scss";
+@import "assets/primeTheme";
+@import "assets/full-cal";
+@import "assets/list-view";
 // Clarity Component SCSS
 @import "../node_modules/@clr/ui/src/utils/components.clarity";
-
 html,
 body,
 :host {
-    font-size: unset;
-    font-size: calc(var(--vh) * 0.3 + 14) !important;
     overflow-x: hidden;
     font-family: 'Segoe UI', 'Open Sans', sans-serif;
 }
@@ -22,37 +22,38 @@ body,
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $candy-app-primary: mat-palette($mat-light-blue);
-$candy-app-accent: mat-palette($mat-light-green,
-    A200,
-    A100,
-    A400);
+$candy-app-accent: mat-palette($mat-light-green, A200, A100, A400);
 // The warn palette is optional (defaults to red).
 $candy-app-warn: mat-palette($mat-red);
 // Create the theme object (a Sass map containing all of the palettes).
-$candy-app-theme: mat-light-theme($candy-app-primary,
-    $candy-app-accent,
-    $candy-app-warn);
+$candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($candy-app-theme);
-
 .mat-tab-link {
     opacity: 1 !important;
     color: black;
     -webkit-text-fill-color: black;
     font-family: 'Segoe UI', 'Open Sans' !important;
-    font-weight: bold !important;
+    font-weight: 500 !important;
 }
 
 ;
-
 .mat-tab-nav-bar {
     display: flex;
 }
 
+;
+.mat-tab-nav-bar.mat-primary .mat-ink-bar {
+    background-color: #0abeb8;
+}
+
+;
 .mat-tab-label-active {
-    -webkit-text-fill-color: hsl(194, 78%, 63%);
+    font-size: 1.5rem;
+    color: #0abeb8;
+    -webkit-text-fill-color: #0abeb8;
 }
 
 ;
