--- a/src/app/ehd-opz/resources/resources.component.html
+++ b/src/app/ehd-opz/resources/resources.component.html
@@ -1,6 +1,6 @@
 <section class='content'>
     <h2 class='clr-justify-content-center'>Documents</h2>
-    <nav mat-tab-nav-bar [ngStyle]="{'margin':'.5rem' }">
+    <nav mat-tab-nav-bar>
         <a mat-tab-link *ngFor="let link of subComponents" [routerLink]="link.path" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
             {{link.label}}
         </a>
