--- a/src/app/ehd-opz/resources/resources.component.scss
+++ b/src/app/ehd-opz/resources/resources.component.scss
@@ -71,12 +71,11 @@
     padding: .3rem;
 }
 
-.modal-body {
-    min-height: 70vh;
+p-card {
     iframe {
         width: 100%;
-        height: 69vh;
-        border-radius: 10px;
+        height: 100%;
+        border-radius: .15rem;
     }
 }
 
