--- a/src/app/ehd-main/home/home.component.scss
+++ b/src/app/ehd-main/home/home.component.scss
@@ -48,3 +48,23 @@
     width: 100%;
     border-radius: .25rem;
 }
+
+.secondary-content {
+    min-height: 50vh;
+    height: auto;
+    width: 100%;
+    margin-top: 2rem
+}
+
+.ehdOrg {
+    font-size: 1.5rem;
+    margin: auto;
+}
+
+.director-grid {
+    height: auto;
+}
+
+.office-grid {
+    height: 40vh;
+}
