--- a/src/app/shared/components/splash/splash.component.scss
+++ b/src/app/shared/components/splash/splash.component.scss
@@ -41,16 +41,16 @@
 
 .clr-input {
     width: 100%;
-    color: white;
-    -webkit-text-fill-color: white;
-    border-color: white;
+    color: black;
+    -webkit-text-fill-color: black;
+    border-color: black;
     font-size: 1rem;
     font-weight: lighter;
 }
 
 clr-icon.clr-control-inline {
-    color: white;
-    -webkit-text-fill-color: white;
+    color: black;
+    -webkit-text-fill-color: black;
     height: 1rem;
     width: 1rem;
 }
