--- a/src/app/shared/components/splash/splash.component.html
+++ b/src/app/shared/components/splash/splash.component.html
@@ -2,7 +2,7 @@
     <div class="clr-col-12">
         <div class="card" [(ngStyle)]="backgroundSetting">
             <div class='card-header clr-row clr-align-content-start'>
-                <img [src]='logoSrc' class="clr-col-4 clr-col-sm-2 clr-col-xl-1" [routerLink]="[parentFragment, 'home']">
+                <img [src]='logoSrc' class="clr-col-4 clr-col-sm-2 clr-col-lg-1" [routerLink]="[parentFragment, 'home']">
                 <ng-content select='[splash-page]'></ng-content>
             </div>
             <div class="card-block clr-justify-content-center clr-col clr-col-sm-10 clr-col-12">
@@ -22,29 +22,12 @@
                     placeholder="What are you looking for?"
                     [dropdown]="true">
                     <ng-template let-page pTemplate="item">
-                        <div class="ui-helper-clearfix" style="border-bottom:1px solid #D5D5D5">
+                        <div class="ui-helper-clearfix" style="border-bottom:1px solid #D5D5D5; min-width: 50vw">
                             <span style="width:32px;display:inline-block;margin:5px 0 2px 5px">{{ page.office }}</span>
                             <div style="font-size:18px;float:right;margin:10px 10px 0 0">{{ page.title }}</div>
                         </div>
                     </ng-template>
                 </p-autoComplete>
-                <!-- <div [(style.display)]="searchDisplay" class='app-search clr-flex clr-col-12 clr-col-sm-12 clr-col-md-10 clr-col-lg-6 clr-col-xl-5'>
-                    <form class="clr-form clr-col-12" [formGroup]="exampleForm">
-                        <div class="clr-form-control clr-flex-row" [ngStyle]="{
-                            'background': 'white',
-                            'padding': 'inherit',
-                            'border-radius': '.25rem'}">
-                            <label for="example" class="clr-align-self-center clr-col-1">
-                            <clr-icon class='clr-control-inline' shape="search"></clr-icon>
-                        </label>
-                            <div class="clr-control-container clr-col-11">
-                                <div class="clr-input-wrapper">
-                                    <input type="text" id="example" placeholder="What are you looking for?" class="clr-input">
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div> -->
                 <ng-content select='[splash-buttons]'></ng-content>
                 <ng-content select='[splash-text]'></ng-content>
             </div>
