--- a/src/app/shared/components/splash/splash.component.scss
+++ b/src/app/shared/components/splash/splash.component.scss
@@ -10,6 +10,7 @@
     width: 100%;
     height: 90vh;
     .card-header {
+        margin-top: 2rem;
         border: 0;
         max-height: 20vh;
         background: transparent;
@@ -32,24 +33,5 @@
         flex-direction: column;
         margin: auto;
         flex-basis: 80%;
-        .app-search {
-            flex-basis: 4rem;
-        }
     }
-}
-
-.clr-input {
-    width: 100%;
-    color: black;
-    -webkit-text-fill-color: black;
-    border-color: black;
-    font-size: 1rem;
-    font-weight: lighter;
-}
-
-clr-icon.clr-control-inline {
-    color: black;
-    -webkit-text-fill-color: black;
-    height: 1rem;
-    width: 1rem;
 }
